# scrdesk

./: .env.example  .gitignore  AI_DEVLOG.md  BUILD_GUIDE.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT_INSTRUCTIONS.md  DEVELOPMENT_ROADMAP.md  HOSTING_QUICKSTART.md  OAUTH_SETUP.md  PRODUCTION_DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.0.md  REMOTE_DESKTOP_IMPLEMENTATION_PLAN.md  REMOTE_DESKTOP_STATUS.md  SERVER_SETUP.md  build.py  docker-compose.yml  landing-page-update.sh  update-vps-landing.sh  update-vps.py  vps-update-final.txt
.github/workflows/: build-release.yml  build-windows.yml  ci-cd.yml  release.yml
admin-panel/: create_all_pages.sh  fix_types.sh  package.json
admin-panel/app/: layout.tsx  page.tsx
admin-panel/app/auth/: page.tsx
admin-panel/app/dashboard/: layout.tsx  page.tsx
admin-panel/app/login/: page.tsx
admin-panel/components/: Sidebar.tsx
admin-panel/contexts/: AuthContext.tsx
admin-panel/lib/: api.ts
backend/: Cargo.toml
backend/migrations/: 001_initial_schema.sql
backend/scrdesk-admin-backend/: Cargo.toml  Dockerfile
backend/scrdesk-admin-backend/src/handlers/: health.rs
backend/scrdesk-analytics/: Cargo.toml
backend/scrdesk-audit-service/: Cargo.toml  Dockerfile
backend/scrdesk-audit-service/src/: main.rs
backend/scrdesk-auth-service/: Cargo.toml  Dockerfile
backend/scrdesk-auth-service/src/: main.rs
backend/scrdesk-auth-service/src/handlers/: auth.rs  mod.rs  oauth.rs  two_factor.rs
backend/scrdesk-auth-service/src/services/: mod.rs
backend/scrdesk-billing-service/: Cargo.toml
backend/scrdesk-billing-service/src/: main.rs
backend/scrdesk-core-server/: Cargo.toml  Dockerfile
backend/scrdesk-core-server/src/: main.rs
backend/scrdesk-core-server/src/handlers/: mod.rs  tenants.rs  users.rs
backend/scrdesk-core-server/src/middleware/: mod.rs
backend/scrdesk-device-manager/: Dockerfile
backend/scrdesk-device-manager/src/handlers/: devices.rs  health.rs  mod.rs
backend/scrdesk-device-manager/src/repositories/: mod.rs
backend/scrdesk-logging/: Cargo.toml
backend/scrdesk-notification-service/: Cargo.toml
backend/scrdesk-notification-service/src/: main.rs
backend/scrdesk-policy-engine/: Cargo.toml  Dockerfile
backend/scrdesk-policy-engine/src/handlers/: health.rs  mod.rs
backend/scrdesk-relay-cluster/: Cargo.toml  Dockerfile
backend/scrdesk-relay-cluster/src/: main.rs
backend/scrdesk-relay-cluster/src/relay/: mod.rs
backend/scrdesk-update-server/: Cargo.toml
backend/scripts/: monitor-dashboard.sh
backend/shared/: Cargo.toml
backend/shared/src/: config.rs  database.rs  error.rs  lib.rs  models.rs
backend/shared/src/models/: audit.rs  device.rs  policy.rs  session.rs  tenant.rs
client/desktop/: Cargo.toml  README.md
client/desktop/.cargo/: config.toml
client/desktop/releases/v1.0.0/: SHA256SUMS
client/desktop/src/: connection.rs  main.rs
examples/: ipc.rs
flutter/android/app/: build.gradle
flutter/lib/: common.dart  consts.dart
flutter/lib/models/: model.dart
flutter/lib/plugin/: manager.dart
flutter/lib/utils/: multi_window_manager.dart  platform_channel.dart
flutter/lib/web/: bridge.dart
flutter/macos/Runner/: Info.plist
libs/clipboard/src/: lib.rs
libs/portable/src/: bin_reader.rs  main.rs
res/: scrdesk-link.desktop  scrdesk.desktop
scrdesk/: .gitignore  AI_DEVLOG.md  docker-compose.yml
scrdesk/.github/workflows/: build-windows.yml
scrdesk/admin-panel/: create_management_pages.sh  next.config.mjs  package-lock.json  tailwind.config.ts
scrdesk/admin-panel/app/: page.tsx
scrdesk/admin-panel/components/: Sidebar.tsx
scrdesk/admin-panel/lib/: api.ts
scrdesk/backend/: Cargo.toml
scrdesk/backend/scrdesk-auth-service/: Cargo.toml  Dockerfile
scrdesk/backend/scrdesk-auth-service/src/handlers/: health.rs  mod.rs
scrdesk/backend/scrdesk-device-manager/: Cargo.toml  Dockerfile
scrdesk/backend/scrdesk-device-manager/src/: main.rs
scrdesk/backend/scrdesk-notification-service/: Cargo.toml
scrdesk/backend/scrdesk-relay-cluster/: Cargo.toml  Dockerfile
scrdesk/backend/scrdesk-relay-cluster/src/handlers/: health.rs  mod.rs  relay.rs
scrdesk/backend/scrdesk-relay-cluster/src/relay/: mod.rs  session.rs
scrdesk/client/desktop/: Cargo.toml  build-macos-app.sh  build-macos-zip.sh  build-release.sh  build-signed-dmg.sh  install-macos.sh
scrdesk/client/desktop/src/: api.rs  main.rs  protocol.rs
scrdesk/client/desktop/src/capture/: linux.rs  macos.rs  mod.rs  windows.rs
scrdesk/client/desktop/src/clipboard/: mod.rs
scrdesk/client/desktop/src/input/: linux.rs  macos.rs  mod.rs  windows.rs
scrdesk/client/desktop/src/network/: mod.rs
scrdesk/client/desktop/src/transfer/: mod.rs
scrdesk/docs/: API.md  DEPLOYMENT.md  downloads.html
scripts/: deploy-scrdesk-comtr.sh  deploy-vps.sh  install-production.sh  quick-deploy.sh  rebrand-to-scrdesk.sh
src/: auth_2fa.rs  client.rs  clipboard.rs  common.rs  core_main.rs  custom_server.rs  flutter.rs  flutter_ffi.rs  ipc.rs  keyboard.rs  lan.rs  lang.rs  main.rs  naming.rs  rendezvous_mediator.rs  server.rs  service.rs  tray.rs  ui.rs  ui_interface.rs  ui_session_interface.rs  updater.rs  virtual_display_manager.rs
src/client/: io_loop.rs
src/hbbs_http/: account.rs  http_client.rs  sync.rs
src/lang/: ar.rs  be.rs  bg.rs  ca.rs  cn.rs  cs.rs  da.rs  de.rs  el.rs  en.rs  eo.rs  es.rs  et.rs  eu.rs  fa.rs  fi.rs  fr.rs  ge.rs  he.rs  hr.rs  hu.rs  id.rs  it.rs  ja.rs  ko.rs  kz.rs  lt.rs  lv.rs  nb.rs  nl.rs  pl.rs  pt_PT.rs  ptbr.rs  ro.rs  ru.rs  sc.rs  sk.rs  sl.rs  sq.rs  sr.rs  (+8 more)
src/platform/: delegate.rs  gtk_sudo.rs  linux.rs  macos.rs  windows.rs
src/plugin/: callback_ext.rs  callback_msg.rs  errno.rs  manager.rs  mod.rs  native.rs  plugins.rs
src/privacy_mode/: win_topmost_window.rs  win_virtual_display.rs
src/server/: clipboard_service.rs  connection.rs  dbus.rs  display_service.rs  input_service.rs  portable_service.rs  rdp_input.rs  terminal_service.rs  uinput.rs  video_service.rs
src/whiteboard/: linux.rs  macos.rs  windows.rs
(+48 files in other folders)
