[workspace]
resolver = "2"
members = [
    "scrdesk-core-server",
    "scrdesk-auth-service",
    "scrdesk-device-manager",
    "scrdesk-policy-engine",
    "scrdesk-relay-cluster",
    "scrdesk-audit-service",
    "scrdesk-notification-service",
    "scrdesk-billing-service",
    "scrdesk-admin-backend",
    "scrdesk-update-server",
    "scrdesk-logging",
    "scrdesk-analytics",
    "shared",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["ScrDesk Team"]
license = "AGPL-3.0"
repository = "https://github.com/shosgoren/scrdesk"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Security & Crypto
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
ring = "0.17"
rustls = "0.22"
rustls-pemfile = "2.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.17", features = ["derive"] }

# S3 / Object Storage
aws-sdk-s3 = "1.13"
aws-config = "1.1"

# Stripe
# stripe-rust = "0.26"  # Version doesn't exist
# async-stripe = { version = "0.36", features = ["runtime-tokio-hyper"] }  # Disabled for now, will enable when needed

# Email
lettre = { version = "0.11", features = ["tokio1-rustls-tls"] }

# Networking
# hbb_common = { git = "https://github.com/rustdesk/rustdesk-server", features = ["quic"] }
# Note: hbb_common disabled for now - causes build issues with git dependencies in Docker
# Will be re-enabled when implementing full RustDesk protocol
