[package]
name = "scrdesk-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
sqlx.workspace = true
validator.workspace = true
jsonwebtoken.workspace = true

# Additional
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
