[package]
name = "scrdesk-device-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "scrdesk-device-manager"
path = "src/main.rs"

[dependencies]
scrdesk-shared = { path = "../shared" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
config.workspace = true
dotenv.workspace = true
validator.workspace = true
