[package]
name = "scrdesk-notification-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "scrdesk-notification-service"
path = "src/main.rs"

[dependencies]
scrdesk-shared = { path = "../shared" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
config.workspace = true
dotenv.workspace = true
lettre.workspace = true
