[package]
name = "scrdesk-relay-cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "scrdesk-relay-cluster"
path = "src/main.rs"

[dependencies]
scrdesk-shared = { path = "../shared" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
config.workspace = true
dotenv.workspace = true
# hbb_common.workspace = true  # Disabled for now - git dependency causes Docker build issues
bytes = "1.11"
futures = "0.3"
tokio-tungstenite = "0.21"
uuid = { version = "1.6", features = ["v4"] }
