[package]
name = "scrdesk-desktop"
version = "1.0.0"
edition = "2021"
authors = ["ScrDesk Team"]
license = "AGPL-3.0"

[[bin]]
name = "scrdesk"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# UI Framework (using egui for cross-platform GUI)
eframe = "0.25"
egui = "0.25"

# Protocol & utilities
bytes = "1.11"
hostname = "0.4"

# Screen capture & encoding
image = "0.24"
scrap = "0.5"  # Cross-platform screen capture

# Video encoding (using software encoder for compatibility)
vpx = { version = "0.1", optional = true }  # VP8/VP9 codec

# Clipboard
arboard = "3.3"

# Networking
tokio-tungstenite = "0.21"
futures = "0.3"

# Utilities
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4"] }

# Platform-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi", "d3d11", "errhandlingapi"] }
windows = { version = "0.52", features = ["Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
core-graphics = "0.23"
core-foundation = "0.9"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"
xcb = "1.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
